--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -6,7 +6,7 @@ on:
     #branches:
       #- master
       #- develop
-  #pull_request:
+  pull_request:
 
 jobs:
   build:
@@ -28,34 +28,46 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Configure Cache
+      id: cache
+      uses: actions/cache@v2
+      env:
+        # Increase this value to reset cache and rebuild the env during the PR
+        CACHE_NUMBER: 1
+      with:
+        path: |
+          **/build
+          **/ccache
+          ~/conda_pkgs_dir
+        key:
+          ${{ runner.os }}-${{ matrix.python-version }}-${{ github.ref }}-${{ env.CACHE_NUMBER }}
+
     - uses: conda-incubator/setup-miniconda@v2
       with:
         auto-update-conda: true
         python-version: ${{ matrix.python-version }}
         channels: conda-forge
         channel-priority: strict
+        use-only-tar-bz2: true
 
-    - name: install prerequisites
-      shell: pwsh
-      run: >
-        conda install
-        cmake
-        ninja
-        pkg-config
-        c-compiler
-        cxx-compiler
-        json-c
-        libhiredis
-
-    - name: print info
-      shell: pwsh
+    - name: Configure Conda Environment
+      shell: bash -l {0}
+      env:
+        PY_VER: ${{ matrix.python-version }}
       run: |
-        conda info
-        conda list
+        conda config --set always_yes yes --set changeps1 no
+        conda config --add channels conda-forge
+        conda install conda-devenv
+        conda devenv
 
-    - name: build and test
-      shell: pwsh
+    - name: Build and test
+      shell: bash -l {0}
+      env:
+        PY_VER: ${{ matrix.python-version }}
+        CC: ccache
+        CXX: ccache
       run: >
+        source activate redis-ipc && ccache -s && ccache -z &&
         ctest
         --build-config "${{ matrix.build_type }}"
         --build-generator "${{ matrix.generator }}"
