new: dev: test ccache module in conda devenv (not enbaled currently)
* can be used on linux; coughs broken compiler error on macos

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -16,6 +16,7 @@ build:
     - {{ pin_subpackage('redis-ipc', max_pin='x.x') }}
   ignore_run_exports:  # [not win]
     - libstdcxx-ng
+    - libcxx
 
 requirements:
   build:
