--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ if(SCM_VERSION_INFO)
   set(LIBRARY_VERSION ${SCM_VERSION_INFO})
 endif()
 
+include(CCache)
+
 set(RIPC_SONAME ${LIBRARY_VERSION})
 
 project(redis_ipc VERSION ${LIBRARY_VERSION} LANGUAGES C CXX)
