--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -5,7 +5,7 @@ dependencies:
   - ninja
   - c-compiler
   - cxx-compiler
-  - ccache  # [unix]
+  - ccache  # [linux]
   - make  # [linux]
   - json-c=0.15
   - libhiredis=1.0.0
