chg: dev: remove ccache; not enough payoff, too much baggage
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/conda-dev.yml
+++ b/.github/workflows/conda-dev.yml
@@ -67,15 +67,12 @@ jobs:
       shell: bash -l {0}
       env:
         PY_VER: ${{ matrix.python-version }}
-        CC: ccache
-        CXX: ccache
       run: >
-        source activate redis-ipc && ccache -s && ccache -z &&
+        source activate redis-ipc &&
         ctest
         --build-config "${{ matrix.build_type }}"
         --build-generator "${{ matrix.generator }}"
         --build-and-test . build
-        --build-options -DRIPC_DISABLE_SOCK_TESTS=1
+        --build-options -DRIPC_DISABLE_SOCK_TESTS=1 -DCCACHE_IGNORE=ON
         --test-command ctest -V --build-config "${{ matrix.build_type }}"
-        && ccache -s
         && gcovr -e test/ -e src/
