--- a/tox.ini
+++ b/tox.ini
@@ -1,69 +1,58 @@
 [tox]
-envlist = py3{6,7,8,9}-linux
+envlist = py3{6,7,8,9}-tests
 skip_missing_interpreters = true
-isolated_build = true
-skipsdist=True
-
-[gh-actions]
-python =
-    3.6: py36
-    3.7: py37
-    3.8: py38
-    3.9: py39
-
-[gh-actions:env]
-PLATFORM =
-    ubuntu-20.04: linux
+skipsdist = true
 
 [testenv]
+envdir = {toxinidir}/.env
+skip_install = true
+
 passenv =
     pythonLocation
-    CI
-    OS
-    PYTHONIOENCODING
+    CI GITHUB*
+    PIP_DOWNLOAD_CACHE
 
-setenv =
-  PYTHONPATH={toxinidir}
+whitelist_externals =
+    {tests,clang,bionic,lint,grind}: bash
+    {tests,clang,bionic,grind}: mkdir
 
-deps =
-    pip>=20.0.1
-    nose
-    coverage
-    coverage_python_version
-    -r requirements.txt
-
-commands =
-    python -c "import redis_ipc"
-    #python -m doctest -v README.rst
-    nosetests -x --detailed-errors .
-
-[testenv:lint]
-passenv =
-    CI
-    PYTHONIOENCODING
+changedir =
+    {tests,clang,bionic,grind}: build
 
 deps =
-    pip>=20.0.1
-    pylint
-    -r requirements.txt
+    pip>=19.0.1
+    {tests,clang,bionic,grind}: cmake
+    cover: gcovr
+    lint: cpplint
+    grind: ValgrindCI
+
+commands_pre =
+    {tests,clang,bionic,grind}: mkdir -p {toxinidir}/build
+    {tests,clang,bionic,grind}: bash -c "../scripts/run_redis.sh start > /dev/null"
+    {tests,clang,bionic,grind}: bash -c "../scripts/run_redis.sh status"
 
 commands =
-    pylint --fail-under=9.25 redis_ipc.py
+    bionic: bash -c "cmake -DWITH_COVERAGE=1 -DGOOGLETEST_SRC_DIR=/usr/src/googletest .."
+    clang: bash -c "cmake -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake .."
+    tests: bash -c "cmake -DWITH_COVERAGE=1 .."
+    grind: bash -c "cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug .."
+    {tests,clang,bionic,grind}: bash -c "cmake --build . -j $(nproc)"
+    {tests,clang,bionic,grind}: bash -c "ctest -V --test-dir ./"
+    lint: bash -c "cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*"
+    cover: gcovr -r {toxinidir} -e test/
+    coverage: gcovr -r {toxinidir} -e test/ --xml-pretty -o {toxinidir}/coverage.xml
+    # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
+    grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true"
+    # valgrind error exit without || true =>  (exited with code 127)
+    grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=multithread_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./multithread_test || true"
+    grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=command_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./command_result_test"
+    grind: bash -c "[[ -f json_check.xml ]] && valgrind-ci json_check.xml --number-of-errors"
+    grind: bash -c "[[ -f json_check.xml ]] && valgrind-ci json_check.xml --summary"
+    grind: valgrind-ci multithread_check.xml --number-of-errors
+    grind: valgrind-ci multithread_check.xml --summary
+    # xml exception (no errors in report) =>  junk after document element
+    #grind: bash -c "[[ -f command_check.xml ]] && valgrind-ci command_check.xml --number-of-errors || true"
+    #grind: bash -c "[[ -f command_check.xml ]] && valgrind-ci command_check.xml --summary || true"
 
-[testenv:style]
-passenv =
-    CI
-    PYTHONIOENCODING
-
-deps =
-    pip>=20.0.1
-    pycodestyle
-    flake8
-    -r requirements.txt
-
-commands =
-    flake8 redis_ipc.py
-    pycodestyle redis_ipc.py
-
-[pycodestyle]
-max-line-length = 84
+commands_post =
+    {tests,clang,bionic,grind}: bash -c "../scripts/run_redis.sh stop > /dev/null"
