chg: dev: remove python-only workflows and badges
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -99,17 +99,17 @@ jobs:
       with:
         fetch-depth: 0
 
-    - uses: sarnold/cccc-action@0.2
+    - uses: sarnold/cccc-action@updates
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         target_branch: gh-pages
+        source_dirs: |
+          src
+          inc
         file_extensions: |
           .hh
           .h
           .c
-        source_dirs: |
-          src
-          inc
 
     - uses: actions/upload-artifact@v2
       with:
