chg: dev: test new action branch
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -99,7 +99,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    - uses: sarnold/cccc-action@main
+    - uses: sarnold/cccc-action@non-personal
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         source_dirs: |
