--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -99,7 +99,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    - uses: sarnold/cccc-action@non-personal
+    - uses: sarnold/cccc-action@0.3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         source_dirs: |
