fix: dev: sort out coverage config, enable debug for branches/lines
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -13,16 +13,16 @@ passenv =
     PIP_DOWNLOAD_CACHE
 
 whitelist_externals =
-    {tests,clang,bionic,lint,grind}: bash
+    {tests,clang,bionic,lint,grind,clean}: bash
     {tests,clang,bionic,grind}: mkdir
 
 changedir =
     {tests,clang,bionic,grind}: build
 
 deps =
-    pip>=19.0.1
+    {tests,clang,bionic,grind,lint}: pip>=19.0.1
     {tests,clang,bionic,grind}: cmake
-    cover: gcovr
+    {tests,clang,bionic,cover}: gcovr
     lint: cpplint
     grind: ValgrindCI
 
@@ -32,15 +32,16 @@ commands_pre =
     {tests,clang,bionic,grind}: bash -c "../scripts/run_redis.sh status"
 
 commands =
-    bionic: bash -c "cmake -DWITH_COVERAGE=1 -DGOOGLETEST_SRC_DIR=/usr/src/googletest .."
+    bionic: bash -c "cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug -DGOOGLETEST_SRC_DIR=/usr/src/googletest .."
     clang: bash -c "cmake -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake .."
-    tests: bash -c "cmake -DWITH_COVERAGE=1 .."
-    grind: bash -c "cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug .."
+    tests: bash -c "cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug .."
+    grind: bash -c "cmake -DCMAKE_BUILD_TYPE=Debug .."
     {tests,clang,bionic,grind}: bash -c "cmake --build . -j $(nproc)"
     {tests,clang,bionic,grind}: bash -c "ctest -V --test-dir ./"
     lint: bash -c "cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*"
-    cover: gcovr -r {toxinidir} -e test/
-    coverage: gcovr -r {toxinidir} -e test/ --xml-pretty -o {toxinidir}/coverage.xml
+    {tests,clang,bionic}: gcovr -s -b -r {toxinidir} -e ../test/
+    cover: gcovr -r {toxinidir} -e test/ --xml-pretty -o {toxinidir}/coverage.xml
+    clean: bash -c 'rm -rf build/ coverage.xml'
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true"
     # valgrind error exit without || true =>  (exited with code 127)
