--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -135,9 +135,13 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install redis (ubuntu)
+    - name: Install deps plus redis
       run: |
         sudo apt-get -qq update
+        sudo apt-get install -y software-properties-common
+        sudo add-apt-repository -y -s ppa:nerdboy/embedded
+        sudo apt-get install -y libjson-c-dev
+        sudo apt-get install -y libhiredis-dev lcov
         sudo apt-get install -yqq redis-server
         sudo systemctl stop redis
 
