--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Common dependencies
       run: |
         sudo apt-get install -y libhiredis-dev autoconf automake
-        sudo apt-get install -y redis-tools redis-server gcovr lcov
+        sudo apt-get install -y redis-server gcovr lcov
 
     - name: Configure
       run: |
