fix: dev: refactor coverage generation/reporting, add fix script
* add autobuild to tox, use lcov => gcovr for report
* xml seems more compliant, except for pkg name="."
* add fix_pkg_name.sh and run it in coverage workflow

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -75,12 +75,12 @@ jobs:
     - name: Display coverage bionic
       if: matrix.os == 'ubuntu-18.04'
       run: |
-        gcovr -s -b --filter src/
+        gcovr -s -b -r src/
 
     - name: Display coverage
       if: matrix.os == 'ubuntu-20.04'
       run: |
-        gcovr -s -b --filter src/.libs/
+        gcovr -s -b -r src/
 
     - name: Cleanup
       run: |
