--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -151,8 +151,11 @@ jobs:
         pip install tox
 
     - name: Generate coverage and fix pkg name
+      env:
+        REAL_NAME: redis_ipc
       run: |
-        tox -e tests,cover
+        tox -e auto,cover
+        ./scripts/fix_pkg_name.sh
 
     - name: Code Coverage Summary Report (data)
       uses: irongut/CodeCoverageSummary@v1.0.2
