--- a/tox.ini
+++ b/tox.ini
@@ -13,25 +13,31 @@ passenv =
     PIP_DOWNLOAD_CACHE
 
 whitelist_externals =
-    {tests,clang,bionic,lint,grind,clean}: bash
+    {tests,clang,ctest,bionic,cover,lint,grind,clean,auto,autoclean}: bash
     {tests,clang,bionic,grind}: mkdir
 
 changedir =
     {tests,clang,bionic,grind}: build
 
 deps =
-    {tests,clang,bionic,grind,lint}: pip>=19.0.1
-    {tests,clang,bionic,grind}: cmake
-    {tests,clang,bionic,cover}: gcovr
+    {auto,tests,clang,ctest,bionic,grind,lint,cover}: pip>=19.0.1
+    {tests,clang,ctest,bionic,grind}: cmake
+    {tests,clang,ctest,bionic,grind}: ninja
+    {auto,tests,clang,ctest,bionic,cover}: gcovr
+    auto: this-cli
     lint: cpplint
     grind: ValgrindCI
 
 commands_pre =
     {tests,clang,bionic,grind}: mkdir -p {toxinidir}/build
-    {tests,clang,bionic,grind}: bash -c "../scripts/run_redis.sh start > /dev/null"
-    {tests,clang,bionic,grind}: bash -c "../scripts/run_redis.sh status"
+    {auto,tests,clang,ctest,bionic,grind}: bash -c "{toxinidir}/scripts/run_redis.sh start > /dev/null"
+    {auto,tests,clang,ctest,bionic,grind}: bash -c "{toxinidir}/scripts/run_redis.sh status"
 
 commands =
+    #auto: this check
+    auto: bash -c './autogen.sh'
+    auto: bash -c './configure {posargs:"--with-coverage"}'
+    auto: bash -c 'make cov'
     bionic: bash -c "cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug -DGOOGLETEST_SRC_DIR=/usr/src/googletest .."
     clang: bash -c "cmake -DCMAKE_TOOLCHAIN_FILE=../clang_toolchain.cmake .."
     tests: bash -c "cmake -DWITH_COVERAGE=1 -DCMAKE_BUILD_TYPE=Debug .."
@@ -39,9 +45,11 @@ commands =
     {tests,clang,bionic,grind}: bash -c "cmake --build . -j $(nproc)"
     {tests,clang,bionic,grind}: bash -c "ctest -V --test-dir ./"
     lint: bash -c "cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*"
-    {tests,clang,bionic}: gcovr -s -b -r {toxinidir} -e ../test/
-    cover: gcovr -r {toxinidir} -e test/ --xml-pretty -o {toxinidir}/coverage.xml
-    clean: bash -c 'rm -rf build/ coverage.xml'
+    {tests,bionic}: gcovr -s -b -r {toxinidir} --filter ../src/ --filter ../inc/
+    ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest -V'
+    {auto,ctest}: gcovr -s -b -r src/
+    cover: gcovr -r src/ --xml -o coverage.xml
+    cover: bash -c 'REAL_NAME="redis_ipc" ./scripts/fix_pkg_name.sh'
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true"
     # valgrind error exit without || true =>  (exited with code 127)
@@ -54,6 +62,9 @@ commands =
     # xml exception (no errors in report) =>  junk after document element
     #grind: bash -c "[[ -f command_check.xml ]] && valgrind-ci command_check.xml --number-of-errors || true"
     #grind: bash -c "[[ -f command_check.xml ]] && valgrind-ci command_check.xml --summary || true"
+    clean: bash -c 'rm -rf build/ coverage.xml'
+    autoclean: bash -c 'make distclean-recursive'
+    autoclean: bash -c 'rm -rf Makefile Makefile.in aclocal.m4 ar-lib autom4te.cache/ compile config.* configure depcomp install-sh libltdl/ ltmain.sh m4/ missing src/Makefile.in test-driver test/Makefile.in'
 
 commands_post =
-    {tests,clang,bionic,grind}: bash -c "../scripts/run_redis.sh stop > /dev/null"
+    {auto,tests,clang,ctest,bionic,grind}: bash -c "{toxinidir}/scripts/run_redis.sh stop > /dev/null"
