fix: dev: use local lcov config file for make cov, fix name in ci
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,7 @@ cov:
 	$(MAKE) $(AM_MAKEFLAGS) check \
 		CFLAGS="$(CFLAGS) $(COVERAGE_CFLAGS) $(COVERAGE_OPTFLAGS)"
 	@echo "Generating coverage report..."
-	$(LCOV) --capture \
+	$(LCOV) --config-file $(top_srcdir)/.lcovrc --capture \
 		--directory "$(top_builddir)/src" \
 		--output-file $(COV_INFO_FILE) \
 		--gcov-tool $(GCOV)
