--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ passenv =
     PIP_DOWNLOAD_CACHE
 
 whitelist_externals =
-    {tests,clang,ctest,bionic,cover,lint,grind,clean,auto,autoclean}: bash
+    {tests,clang,ctest,bionic,lint,grind,clean,auto,autoclean}: bash
     {tests,clang,bionic,grind}: mkdir
 
 changedir =
@@ -48,8 +48,7 @@ commands =
     {tests,bionic}: gcovr -s -b -r {toxinidir} --filter ../src/ --filter ../inc/
     ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest -V'
     {auto,ctest}: gcovr -s -b -r src/
-    cover: gcovr -r src/ --xml -o coverage.xml
-    cover: bash -c 'REAL_NAME="redis_ipc" ./scripts/fix_pkg_name.sh'
+    cover: gcovr -r src/ --xml-pretty -o coverage.xml
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true"
     # valgrind error exit without || true =>  (exited with code 127)
