--- a/.lcovrc
+++ b/.lcovrc
@@ -13,6 +13,7 @@ geninfo_external = 0
 geninfo_gcov_all_blocks = 0
 #geninfo_adjust_src_path = /tmp/build => /usr/src
 geninfo_adjust_src_path = /.libs
+genhtml_precision = 4
 geninfo_auto_base = 0
 
 lcov_function_coverage = 1
