cheg: dev: test temp fix for coverage workflow data parse error
* remove temp fix when upstream issue is fixed
* limit	metrics	collection to src/ directory only
* adjust gcovr cmd root/path args, cleanup cruft

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -150,12 +150,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install tox
 
+    # add temporary sed knife fix for coveragae data
     - name: Generate coverage and fix pkg name
       env:
         REAL_NAME: redis_ipc
       run: |
         tox -e auto
         ./scripts/fix_pkg_name.sh
+        sed -i -e 's|complexity="0.0"|complexity="0"|g' coverage.xml
 
     - uses: actions/upload-artifact@v2
       with:
