--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ commands =
     {tests,clang,bionic,grind}: bash -c "cmake --build . -j $(nproc)"
     {tests,clang,bionic,grind}: bash -c "ctest -V --test-dir ./"
     lint: bash -c "cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*"
-    {tests,bionic}: gcovr -s -b -r {toxinidir} --filter ../src/ --filter ../inc/
+    {tests,bionic}: gcovr -s -b -r {toxinidir}/src/ .
     ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest -V'
     auto: gcovr -s -b -r src/
     auto: gcovr -r src/ --xml-pretty -o coverage.xml
