fix: dev: cleanup coverage flags, upload coverage report
* speedup: switch coverage workflow to ctest
* cleanup: make sure covrage builds are identical
* add cov report artifact upload to smoke workflow (no gh-pages branch yet)
* add/update coverage cfgs and tox commands

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -154,7 +154,7 @@ jobs:
       env:
         REAL_NAME: redis_ipc
       run: |
-        tox -e auto
+        tox -e ctest
         ./scripts/fix_pkg_name.sh
 
     - uses: actions/upload-artifact@v2
