--- a/Makefile.am
+++ b/Makefile.am
@@ -22,12 +22,18 @@ COV_INFO_FILE = $(top_builddir)/coverage.info
 COV_DIR = $(top_builddir)/coverage
 cov:
 	$(MAKE) $(AM_MAKEFLAGS) \
-		CFLAGS="$(CFLAGS) $(COVERAGE_CFLAGS) $(COVERAGE_OPTFLAGS)"
+		CFLAGS="$(CFLAGS) $(COVERAGE_CFLAGS) $(COVERAGE_OPTFLAGS)" \
+		CXXFLAGS="$(CXXFLAGS) $(COVERAGE_CFLAGS) $(COVERAGE_OPTFLAGS)"
 	$(MAKE) $(AM_MAKEFLAGS) check \
-		CFLAGS="$(CFLAGS) $(COVERAGE_CFLAGS) $(COVERAGE_OPTFLAGS)"
+		CFLAGS="$(CFLAGS) $(COVERAGE_CFLAGS) $(COVERAGE_OPTFLAGS)" \
+		CXXFLAGS="$(CXXFLAGS) $(COVERAGE_CFLAGS) $(COVERAGE_OPTFLAGS)"
 	@echo "Generating coverage report..."
 	$(LCOV) --config-file $(top_srcdir)/.lcovrc --capture \
-		--directory "$(top_builddir)/src" \
+		--directory "$${PWD}/src" \
+		--directory "$${PWD}/test" \
+		--include "$${PWD}/src/redis_ipc.c" \
+		--include "$${PWD}/src/redis_ipc.h" \
+		--include "$${PWD}/inc/json.hh" \
 		--output-file $(COV_INFO_FILE) \
 		--gcov-tool $(GCOV)
 	$(GENHTML) --prefix "$(top_builddir)" \
