--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ commands_pre =
     {auto,tests,clang,ctest,bionic,grind}: bash -c "{toxinidir}/scripts/run_redis.sh status"
 
 commands =
+    # sadly this-cli cannot pass args to configure
     #auto: this check
     auto: bash -c './autogen.sh'
     auto: bash -c './configure {posargs:"--with-coverage"}'
@@ -45,12 +46,12 @@ commands =
     {tests,clang,bionic,grind}: bash -c "cmake --build . -j $(nproc)"
     {tests,clang,bionic,grind}: bash -c "ctest -V --test-dir ./"
     lint: bash -c "cpplint --output=gsed {toxinidir}/src/* {toxinidir}/inc/*"
-    {tests,bionic}: gcovr -s -b -r {toxinidir}/src/ .
+    {tests,bionic}: gcovr -s -b -r {toxinidir} .
     ctest: bash -c 'ctest --build-generator {posargs:"Unix Makefiles"} --build-and-test . build --build-options -DWITH_COVERAGE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest -V'
-    auto: gcovr -s -b -r src/
-    auto: gcovr -r src/ --xml-pretty -o coverage.xml
-    ctest: gcovr -s -b -r src/ build/
-    cover: gcovr -r src/ --xml-pretty -o coverage.xml build/
+    auto: gcovr -s -b src/.libs/ test/
+    auto: gcovr --xml-pretty -o coverage.xml src/.libs/ test/
+    ctest: gcovr -s -b build/
+    cover: gcovr --xml-pretty -o coverage.xml build/
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true"
     # valgrind error exit without || true =>  (exited with code 127)
@@ -65,7 +66,7 @@ commands =
     #grind: bash -c "[[ -f command_check.xml ]] && valgrind-ci command_check.xml --summary || true"
     clean: bash -c 'rm -rf build/ coverage.xml'
     autoclean: bash -c 'make distclean-recursive'
-    autoclean: bash -c 'rm -rf Makefile Makefile.in aclocal.m4 ar-lib autom4te.cache/ compile config.* coverage* configure configure~ depcomp install-sh libltdl/ ltmain.sh m4/ missing src/Makefile.in test-driver test/Makefile.in'
+    autoclean: bash -c 'rm -rf Makefile Makefile.in aclocal.m4 ar-lib autom4te.cache/ compile config.* coverage* configure configure~ depcomp install-sh libltdl/ ltmain.sh m4/ missing src/Makefile.in test-driver test/gmon.out test/Makefile.in'
 
 commands_post =
     {auto,tests,clang,ctest,bionic,grind}: bash -c "{toxinidir}/scripts/run_redis.sh stop > /dev/null"
