fix: dev: create both html coverage reports, add inc/ dir to metrics artifact
* create both html reports, one for functions and one for branches
* note each report is created via separate tox cmds
* sync up metrics source code with coverage
* update conda devenv file, use Ninja generator

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

chg: dev: py38/39 is not resolving deps like 37, remove jinja py ver

* this should really not be necessary, somehow devenv is inconsistent
* it should work fine across all python versions 36 => 39
* even on macos

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

chg: dev: set base conda env to py 3.x and restore jinja ver

* set default to 37 instead of 39, reset to macos-11

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -68,7 +68,6 @@ jobs:
         tox -e "${{ matrix.test_cmd }}"
 
     - uses: actions/upload-artifact@v2
-      if: matrix.os == 'ubuntu-20.04'
       with:
         name: coverage
         path: ./coverage
@@ -85,7 +84,9 @@ jobs:
     - uses: sarnold/cccc-action@0.3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        source_dirs: src
+        source_dirs: |
+          src
+          inc
 
     - uses: actions/upload-artifact@v2
       with:
