--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ passenv =
 
 whitelist_externals =
     {tests,clang,ctest,bionic,lint,grind,clean,auto,autoclean}: bash
-    {tests,clang,bionic,grind}: mkdir
+    {tests,clang,bionic,grind,cover}: mkdir
 
 changedir =
     {tests,clang,bionic,grind}: build
@@ -29,6 +29,7 @@ deps =
     grind: ValgrindCI
 
 commands_pre =
+    bionic: mkdir -p {toxinidir}/coverage
     {tests,clang,bionic,grind}: mkdir -p {toxinidir}/build
     {auto,tests,clang,ctest,bionic,grind}: bash -c "{toxinidir}/scripts/run_redis.sh start > /dev/null"
     {auto,tests,clang,ctest,bionic,grind}: bash -c "{toxinidir}/scripts/run_redis.sh status"
@@ -52,6 +53,7 @@ commands =
     auto: gcovr --xml-pretty -o coverage.xml src/.libs/ test/
     ctest: gcovr -s -b build/
     cover: gcovr --xml-pretty -o coverage.xml build/
+    bionic: gcovr --html --html-details -o {toxinidir}/coverage/coverage.html .
     # runtime assertion error without || true =>  (SIGSEGV)) (exited with code -11)
     grind: bash -c "valgrind --tool=memcheck --xml=yes --xml-file=json_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./json_test || true"
     # valgrind error exit without || true =>  (exited with code 127)
