--- a/.lcovrc
+++ b/.lcovrc
@@ -2,10 +2,10 @@
 #
 #genhtml_css_file = gcov.css
 
-genhtml_branch_coverage = 1
+genhtml_branch_coverage = 0
 genhtml_function_coverage = 1
 genhtml_charset=UTF-8
-genhtml_demangle_cpp=1
+#genhtml_demangle_cpp=1
 
 geninfo_checksum = 0
 geninfo_compat_libtool = 1
