chg: dev: json_test coughs runtime exception on macos, disable for now
* tested on macos-10/11 in github (macos-10 did not run)

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -7,7 +7,8 @@ dependencies:
   - c-compiler
   - cxx-compiler
   - pip
-  - make  # [linux]
+  - make  # [unix]
+  - pkg-config  # [unix]
   - json-c=0.15
   - libhiredis=1.0.0
   - lcov
