--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,18 +31,14 @@ if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_EXTENSIONS OFF)
 endif()
 
-SET(CMAKE_C_STANDARD 99)
-SET(CMAKE_DEBUG_POSTFIX d)
+set(CMAKE_C_STANDARD 99)
+set(CMAKE_DEBUG_POSTFIX d)
 
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING
-            "Default build type: RelWithDebInfo" FORCE)
+  set(CMAKE_BUILD_TYPE
+      "RelWithDebInfo"
+      CACHE STRING "Default build type: RelWithDebInfo" FORCE)
 endif()
-
-# Ensure proper configuration if in a conda environment
-#include(CondaAware)
-# find the active python site-packages path
-#include(FindPython)
 
 option(BUILD_SHARED_LIBS "build shared libraries" ON)
 option(BUILD_STATIC_LIBS "Build static libraries" OFF)
@@ -54,7 +50,9 @@ set(RIPC_RUNTIME_DIR "" CACHE PATH "path to directory containing redis server so
 
 set(WITH_COVERAGE "" CACHE PATH "build with test coverage enabled")
 
-set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/share/pkgconfig" CACHE PATH "Install directory for pkgconfig (.pc) files")
+set(INSTALL_PKGCONFIG_DIR
+    "${CMAKE_INSTALL_PREFIX}/share/pkgconfig"
+    CACHE PATH "Install directory for pkgconfig (.pc) files")
 set(EXTRA_TARGET_LINK_LIBRARIES)
 
 # accept cmake option -or- environment variable
@@ -76,10 +74,6 @@ if(WITH_COVERAGE)
   include(TestCoverage)
 endif()
 
-#include(FindJSONC)
-#include_directories(${JSONC_INCLUDE_DIRS})
-#list(APPEND THIRD_PARTY_LIBS ${JSONC_LIBRARIES})
-
 find_package(PkgConfig)
 
 if(NOT PkgConfig_FOUND)
@@ -88,11 +82,11 @@ if(NOT PkgConfig_FOUND)
   list(APPEND THIRD_PARTY_LIBS json-c hiredis)
 else()
   pkg_check_modules(HIREDIS IMPORTED_TARGET hiredis)
-  if (HIREDIS_FOUND)
+  if(HIREDIS_FOUND)
     list(APPEND THIRD_PARTY_LIBS PkgConfig::HIREDIS)
   endif()
   pkg_check_modules(JSONC IMPORTED_TARGET json-c)
-  if (JSONC_FOUND)
+  if(JSONC_FOUND)
     list(APPEND THIRD_PARTY_LIBS PkgConfig::JSONC)
   endif()
 endif()
@@ -107,11 +101,11 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     # See http://www.kitware.com/blog/home/post/939 for details.
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
   endif()
-  # CMake defaults to /W3, but some users like /W4 (or /Wall) and /WX,
-  # so we disable various warnings that aren't particularly helpful.
+  # CMake defaults to /W3, but some users like /W4 (or /Wall) and /WX, so we
+  # disable various warnings that aren't particularly helpful.
   add_compile_options(/wd4100 /wd4201 /wd4456 /wd4457 /wd4702 /wd4815)
-  # Without a byte order mark (BOM), Visual Studio assumes that the source
-  # file is encoded using the current user code page, so we specify UTF-8.
+  # Without a byte order mark (BOM), Visual Studio assumes that the source file
+  # is encoded using the current user code page, so we specify UTF-8.
   add_compile_options(/utf-8)
 endif()
 
@@ -124,8 +118,7 @@ elseif(UNIX)
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc
-                    ${CMAKE_CURRENT_SOURCE_DIR}/src
-                    )
+                    ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 set(RIPC_SOURCES src/redis_ipc.c)
 
@@ -143,11 +136,8 @@ target_link_libraries(redis_ipc ${EXTRA_TARGET_LINK_LIBRARIES})
 target_compile_definitions(redis_ipc PRIVATE VERSION_INFO=${LIBRARY_VERSION})
 
 # this looks weird, but needed for correct SOVERSION links
-set_target_properties(redis_ipc
-    PROPERTIES
-    VERSION ${RIPC_SONAME}
-    SOVERSION ${LIBRARY_SOVERSION}
-    )
+set_target_properties(redis_ipc PROPERTIES VERSION ${RIPC_SONAME}
+                                           SOVERSION ${LIBRARY_SOVERSION})
 
 if(RIPC_BUILD_TESTING)
   enable_testing()
@@ -161,31 +151,21 @@ if(RIPC_BUILD_TESTING)
 
     foreach(target ${TEST_TARGETS})
       add_executable(${target} test/${target}.c)
-      target_link_libraries(${target}
-        redis_ipc
-        ${EXTRA_TARGET_LINK_LIBRARIES}
-        ${CMAKE_THREAD_LIBS_INIT}
-        )
+      target_link_libraries(${target} redis_ipc ${EXTRA_TARGET_LINK_LIBRARIES}
+                            ${CMAKE_THREAD_LIBS_INIT})
       add_test(NAME ${target} COMMAND ${target})
     endforeach(target)
   endif()
 
   add_executable(json_test test/json_test.cpp)
-  target_link_libraries(json_test
-    redis_ipc
-    ${EXTRA_TARGET_LINK_LIBRARIES}
-    ${CMAKE_THREAD_LIBS_INIT}
-    )
+  target_link_libraries(json_test redis_ipc ${EXTRA_TARGET_LINK_LIBRARIES}
+                        ${CMAKE_THREAD_LIBS_INIT})
   add_test(NAME json_test COMMAND json_test)
 endif()
 
-set(RIPC_HEADERS
-    inc/json.hh
-    src/redis_ipc.h
-    )
+set(RIPC_HEADERS inc/json.hh src/redis_ipc.h)
 
-install(FILES ${RIPC_HEADERS}
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES ${RIPC_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 if(BUILD_SHARED_LIBS)
   list(APPEND RIPC_LIBS redis_ipc)
@@ -195,17 +175,21 @@ if(BUILD_STATIC_LIBS)
   list(APPEND RIPC_LIBS ripcstatic)
 endif()
 
-install(TARGETS ${RIPC_LIBS} EXPORT redis_ipcConfig
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(
+  TARGETS ${RIPC_LIBS}
+  EXPORT redis_ipcConfig
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  INCLUDES
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-install(EXPORT redis_ipcConfig
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/redis_ipc NAMESPACE redis_ipc::)
-
+install(
+  EXPORT redis_ipcConfig
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/redis_ipc
+  NAMESPACE redis_ipc::)
 
 set(RIPC_PC ${CMAKE_CURRENT_BINARY_DIR}/redis-ipc.pc)
 set(prefix ${CMAKE_INSTALL_PREFIX})
-configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/redis-ipc.pc.in ${RIPC_PC} @ONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/redis-ipc.pc.in ${RIPC_PC} @ONLY)
 install(FILES ${RIPC_PC} DESTINATION ${INSTALL_PKGCONFIG_DIR})
