chg: dev: add pre-commit bash formatter, apply changes
* update .pre-commit-config.yaml with prettysh
* add prettysh to tox -e lint command
* commit autogen.sh format changes

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,10 @@ repos:
     rev: v0.6.9
     hooks:
       - id: cmake-format
+  - repo: https://github.com/lovesegfault/beautysh
+    rev: v6.1.0
+    hooks:
+      - id: beautysh
 #  - repo: https://github.com/pocc/pre-commit-hooks
 #    rev: v1.1.1
 #    hooks:
