--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ deps =
     {auto,tests,clang,ctest,bionic,cover}: gcovr
     auto: this-cli
     lint: cpplint
+    lint: beautysh
     grind: ValgrindCI
 
 commands_pre =
