configurable path to redis server socket
* compile-time configuration with RIPC_RUNTIME_DIR
  * with cmake
    cmake -DRIPC_RUNTIME_DIR=/var/tmp/redis-ipc
  * with automake
    export RIPC_RUNTIME_DIR=/var/tmp/redis-ipc ./configure

In each case, default path will be $RIPC_RUNTIME_DIR/socket
Note that matches the usage of RIPC_RUNTIME_DIR in scripts/run_redis.sh
If you set RIPC_RUNTIME_DIR when building, use the same value
when using run_redis.sh to setup for tests.

Path can be overrident at runtime by setting RIPC_SERVER_PATH
NOTE this is full path, not just the parent dir like RIPC_RUNTIME_DIR:
  export RIPC_SERVER_PATH=/var/tmp/redis-ipc/socket

--- a/configure.ac
+++ b/configure.ac
@@ -124,6 +124,9 @@ fi
 AC_DEFINE_UNQUOTED(ENABLE_DEBUG, `enable_value $enable_debug`, [Enable debugging])
 AC_DEFINE_UNQUOTED(ENABLE_GPROF, `enable_value $enable_gprof`, [Enable gcc profiling])
 
+AC_ARG_VAR(RIPC_RUNTIME_DIR, [Supply default path to directory containing redis server socket])
+AM_CONDITIONAL([RIPC_RUNTIME_DIR], [test x$RIPC_RUNTIME_DIR != x])
+
 PKG_INSTALLDIR
 
 AC_CONFIG_FILES([Makefile \
