--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,8 @@
-AM_CPPFLAGS             = -I$(top_srcdir)/src
+if RIPC_RUNTIME_DIR
+PATH_FLAG = -DRIPC_RUNTIME_DIR=\"$(RIPC_RUNTIME_DIR)\"
+endif
+
+AM_CPPFLAGS             = -I$(top_srcdir)/src $(PATH_FLAG)
 
 lib_LTLIBRARIES = libredis_ipc.la
 
